documentation using swaggo openapi finished
